--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.maincontainer {
+  display:flex;
+  justify-content: center;
+
+  flex-wrap: wrap;
+}
+.infocontainer {
+  text-align:center;
+}
+.lastupdate {
+  padding:10px
+}
+.footer {
+  display: flex;
+  align-items: center;
+  background-color: #f9fbe7;
 }
